--- a/Standard/hetonto-subset.sty
+++ b/Standard/hetonto-subset.sty
@@ -387,3 +387,7 @@
 
 \newcommand{\category}[1]{\ensuremath{\mathbf{#1}}\xspace}
 \newcommand{\Models}{\ensuremath{\text{Mod}}\xspace}
+
+
+%%%%%% refinement
+
